Thu Dec 28 23:10:52 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/TC.mpc:
        * tao/TC_IIOP.mpc:

          Apparently, interceptors and pi are still needed for the
          build. Reverting my change from Thu Dec 28 19:29:58 UTC 2006.

Thu Dec 28 20:30:14 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * docs/libraries.html:

          Updated documentation for Transport::Current.

        * tao/TransportCurrent/Current_ORBInitializer_Base.h:

          Reversing the removal of *_Export.h include to match the
          convention.

        * tests/TransportCurrent/Framework/run_test.pl:

          Added code to support -static and -dynamic parameters, similar
          to the IIOP test.

Thu Dec 28 20:01:34 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/TransportCurrent/Current_ORBInitializer_Base.h:
        * tests/TransportCurrent/Framework/run_test.pl:

Thu Dec 28 19:29:58 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/TC.mpc:
        * tao/TC_IIOP.mpc:

          Removed interceptors and pi from the list of base projects. The
          Transport::Current feature isnot itself dependent on these
          features. The tests however are, and their *.mpc files have been
          modifiedaccordingly to add interceptors explicitely.

        * tao/TransportCurrent/Current_ORBInitializer.h:

          Removed commented code.

        * tao/TransportCurrent/Current_ORBInitializer.cpp:

          Added "#pragma once".

        * tao/TransportCurrent/Current_ORBInitializer_Base.h:

          Removed unnecessary *_Export.h include since TCC.h already
          includes it.

        * tao/TransportCurrent/IIOP_Current_Loader.cpp:

          Removed an extra ';' after ACE_STATIC_SVC_REQUIRE.

        * tao/TransportCurrent/Transport_Current_Export.h:

          Regenerated this file to fix DLL export problems in static
          builds.

        * tests/TransportCurrent/Framework/Framework.mpc:
